<resources>
    <string name="app_name">Social Media</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="select_image">select image</string>
    <string name="enter_a_comment">Enter a comment</string>
    <string name="upload">Upload</string>
    <string name="add_post">Add Post</string>
    <string name="sign_out">Sign Out</string>
</resources>